<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="@dimen/sp20"
        android:layout_margin="@dimen/dp20"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:hint="@string/enter_message_name"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:padding="@dimen/dp5" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:hint="@string/enter_message_password"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:padding="@dimen/dp5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_countryPreference="us,sg"
            app:ccp_autoFormatNumber="true"
            />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/enter_message_mobile"
            android:inputType="phone"
            android:singleLine="true"
            android:layout_margin="@dimen/dp10"
            android:padding="@dimen/dp5"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:text="@string/login_now"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_register"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp20"
        android:textColor="@color/colorAccent" />
</LinearLayout>