<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="20dp"
        android:layout_margin="20dp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:hint="@string/enter_message_name"
        android:layout_height="wrap_content" />

<!--    <EditText-->
<!--        android:id="@+id/et_mobile"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_margin="5dp"-->
<!--        android:hint="@string/enter_message_mobile"-->
<!--        android:layout_height="wrap_content" />-->

    <EditText
        android:id="@+id/et_email"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:hint="@string/enter_message_email"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:hint="@string/enter_message_password"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_countryPreference="us,sg"
            app:ccp_autoFormatNumber="true"
            />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/enter_message_mobile"
            android:inputType="phone"
            android:singleLine="true"
            android:layout_margin="10dp"
            android:padding="5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:text="@string/register_now"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

</LinearLayout>